[package]
name = "fmod-test-bed"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
glam = "0.29.2"
libfmod = "2.222.6"
u64-id = "0.1.0"
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.99"
bitflags = { version = "2.6.0" }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.76", features = ["Window", "console"] }
